--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,pycharm,macos,linux,windows
+
+# Ignore jar file in root directory (too large to upload to github)
+*.jar
